--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run formatter
-      run: cargo -- --fmt
+      run: cargo fmt -- --check
     - name: Run clippy
       run: cargo clippy -- -D warnings
     - name: Run tests
